--- a/main.css
+++ b/main.css
@@ -2970,7 +2970,7 @@ polygon {
 
 .centeredTQ {
     position: absolute;
-    bottom: 1%;
+    bottom: 0;
     left: 50%;
     transform: translate(-50%, -50%);
 }
