--- a/main.css
+++ b/main.css
@@ -1045,15 +1045,15 @@ hr {
 }
 
 input {
-    width: 100%;
-    height: 50px;
-    padding: 0 16px;
+    width: 16em;
+    height: 42px;
+    padding: 0 12px;
     background: var(--white);
     border: 1px solid var(--black-less);
     font-size: 16px;
     border-radius: 3px;
     outline: none;
-    box-shadow: 4px 4px 0px var(--grey-dark);
+    box-shadow: 4px 4px 0px var(--grey-normal);
 }
 
 .input-field button {
@@ -1074,7 +1074,8 @@ input {
 
 button.passwordArr {
     padding: 0;
-    margin-top: -1.8em;
+    margin-top: -1.26em;
+    color: var(--black);
 }
 
 .pwIncorrectHeight {
@@ -1083,8 +1084,8 @@ button.passwordArr {
 
 #pwIncorrect {
     margin: 0;
-    padding: 0;
-    font-weight: 300;
+    padding: 8px;
+    font-weight: 500;
     color: var(--alert);
     display: none;
 }
