--- a/main.css
+++ b/main.css
@@ -3023,7 +3023,7 @@ polygon {
 .divider1 {
     display: flex;
     align-items: center;
-    width: 1px;
+    width: 0.03em;
     /* weight */
     border-top: 30px solid var(--grey-dark);
     /* height */
@@ -3568,7 +3568,7 @@ a:link {
 
 a:link.textUnderline {
     text-decoration-line: underline;
-    text-decoration-thickness: 1px;
+    text-decoration-thickness: 0.03em;
     text-underline-offset: 6px;
     text-decoration-color: var(--black);
 
