--- a/main.css
+++ b/main.css
@@ -2695,8 +2695,10 @@ polygon {
 	background-image: var(--img-DS);
 }
 .shadowBox2 {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    box-shadow: rgba(172, 176, 179, 0.1) -4px 9px 25px -6px;
+
 }
+
 /* 
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 */
