--- a/main.css
+++ b/main.css
@@ -2702,10 +2702,7 @@ polygon {
 	border-radius: var(--border-radius);
 	background-image: var(--img-DS);
 }
-.shadowBox2 {
-    box-shadow: rgba(172, 176, 179, 0.1) -4px 9px 25px -6px;
 
-}
 
 /* 
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
@@ -2714,7 +2711,10 @@ polygon {
 .shadowBox {
     box-shadow: rgba(139, 139, 139, 0.45) 0px 25px 20px -20px;
 }
+.shadowBoxLt {
+    box-shadow: rgba(172, 176, 179, 0.1) -4px 9px 25px -6px;
 
+}
 .shadowFilter {
     filter: drop-shadow(3px 2px 2px rgba(143, 143, 143, 0.404));
 }
