--- a/main.css
+++ b/main.css
@@ -3655,7 +3655,7 @@ a:link.textProject {
 }
 
 .active.greenNav a {
-    color: var(--colorBlack);
+    color: var(--Black);
 }
 
 .active.appointa a {
